[tool.poetry]
name = "talk-ai"
version = "0.0.1"
description = "talkAI is a conversation AI written in python that simulates a human."
authors = ["Giacomo S.M. <talkingslug@duck.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
time-it = "^3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
